--- a/src/components/Time/Time.css
+++ b/src/components/Time/Time.css
@@ -22,3 +22,11 @@
     height: 4px;
     border-radius: 16px;
 } */
+
+.colaboradores {
+    display: flex;
+    justify-content: space-around;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
